# nba

./: .env exemple  .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: config_logger.py  crawler_nba_api.py  crawler_nba_elements.py  extract.py  extract_pipeline.py  minio_utils.py  transform.py
